--- a/course.yml
+++ b/course.yml
@@ -1,6 +1,6 @@
 title            : RStudio Test Course
 author_field     : cam-martin
-description      : 
+description      : This is a test for a future open course
 author_bio       : cam-martin is smelly 
 university       : DataCamp
 difficulty_level : 2
